--- a/package.json
+++ b/package.json
@@ -2,24 +2,32 @@
 	"name": "vuex-factories",
 	"version": "1.0.0",
 	"description": "typescript based factories to simplify vuex module creation and upkeep",
-	"main": "index.js",
+	"main": "./dist/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"compile": "rm -rf ./dist/ && npx tsc && prettier --write ./dist/*.*"
 	},
 	"author": "Na'aman Hirschfeld",
-	"license": "ISC",
+	"license": "MIT",
+	"keywords": [
+		"vuex",
+		"factory",
+		"factories",
+		"typescript"
+	],
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^2.11.0",
 		"@typescript-eslint/parser": "^2.11.0",
 		"eslint": "^6.7.2",
 		"eslint-config-prettier": "^6.7.0",
 		"prettier": "^1.19.1",
-		"typescript": "^3.7.3",
-		"vuex": "^3.1.2"
+		"typescript": "^3.7.3"
 	},
 	"repository": {
 		"type": "git",
-		"url": "git://github.com/Goldziher/vuex-helpers"
+		"url": "git://github.com/Goldziher/vuex-factories"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"vuex": "^3.1.2"
+	}
 }
