--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,4 +9,7 @@
 		{ "language": "typescript", "autoFix": true },
 	],
 	"typescript.tsdk": "node_modules/typescript/lib",
+	"editor.codeActionsOnSave": {
+		"source.fixAll.eslint": true
+	},
 }
