--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "1.0.0",
 	"description": "typescript based factories to simplify vuex module creation and upkeep",
 	"main": "./dist/index.js",
+	"files": [
+		"./dist/*.*"
+	],
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"compile": "rm -rf ./dist/ && npx tsc && prettier --write ./dist/*.*"
