--- a/package.json
+++ b/package.json
@@ -35,16 +35,20 @@
 	},
 	"homepage": "https://github.com/Goldziher/vuex-factories#readme",
 	"devDependencies": {
+		"@types/jest": "^25.2.1",
 		"@typescript-eslint/eslint-plugin": "^2.31.0",
 		"@typescript-eslint/parser": "^2.31.0",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^6.11.0",
+		"jest": "^26.0.1",
 		"prettier": "^2.0.5",
 		"rimraf": "^3.0.2",
 		"rollup": "^2.8.2",
 		"rollup-plugin-terser": "^5.3.0",
 		"rollup-plugin-typescript2": "^0.27.0",
+		"ts-jest": "^25.5.1",
 		"typescript": "^3.8.3",
+		"vue": "^2.6.11",
 		"vuex": "^3.3.0"
 	},
 	"peerDependencies": {
