--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"build": "rimraf dist && rollup -c rollup.config.js",
 		"postpublish": "rimraf dist",
 		"coveralls": "jest --coverage --silent && cat ./coverage/lcov.info | coveralls",
-		"test": "jest --silent"
+		"test": "jest"
 	},
 	"repository": {
 		"type": "git",
@@ -52,6 +52,7 @@
 		"vuex": "^3.3.0"
 	},
 	"peerDependencies": {
-		"vuex": "^3.3.0"
+		"vue": ">=2",
+		"vuex": ">=3"
 	}
 }
