--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@types/jest": "^25.2.1",
 		"@typescript-eslint/eslint-plugin": "^2.31.0",
 		"@typescript-eslint/parser": "^2.31.0",
+		"coveralls": "^3.1.0",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^6.11.0",
 		"jest": "^26.0.1",
